--- a/checks.yml
+++ b/checks.yml
@@ -1,4 +1,11 @@
-# checks.yml file
-checks for retail_orders:
-  - row_count > 0
-  - missing_count(order_quantity) < 3
+checks for INFO2:
+  - row_count:
+      name: count
+      identity: 09f1f6d4-f67d-4d23-8bed-9fc6b7bffc47
+      fail: when = 0
+
+      checks for INFO:
+  - duplicate_count(NAME):
+      name: duplicate
+      identity: 8ce7238f-007c-44b1-a056-19774aaa9d5c
+      fail: when > 0
