--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           configuration: ./configuration.yml
           checks: ./checks.yml
         env:
-          SODA_CLOUD_API_KEY: 0c1708b7-30fd-41c0-8409-8f531fd58eff
-          SODA_CLOUD_API_SECRET: ETRvLV28YJstJYGPtBLWSYQW2bf14Y_Tup7lv44x8b0IUjWOGpdRsQ
-          SNOWFLAKE_USERNAME: RAJU
+          SODA_CLOUD_API_KEY: 75f02b82-989f-475a-ae79-51cf7b58bad4
+          SODA_CLOUD_API_SECRET: 4s8lPrQlmFgTXR-BkKkvR6h6qp0uUCXs0ZAILzPShJCV_rXZ_eGDZg
+          SNOWFLAKE_USERNAME: raju
           SNOWFLAKE_PASSWORD: Dhiyaguru@465577
